# bevy_tiled

./: Cargo.toml  README.md  assets  notes.md  todo.md
.zed/: settings.json
assets/: demo.tmx  demo.world  everything.tiled-project  everything.tiled-session  infinite_map.tmx  player.tx  terrains.tsx  tiled_types.json  toy.tx
crates/bevy_tiled_assets/: Cargo.toml
crates/bevy_tiled_assets/assets/: assets  world.world
crates/bevy_tiled_assets/assets/maps/: basic_physics.tmx
crates/bevy_tiled_assets/examples/: basic_loading.rs
crates/bevy_tiled_assets/src/: lib.rs  plugin.rs
crates/bevy_tiled_assets/src/assets/: map.rs  template.rs
crates/bevy_tiled_assets/src/loaders/: map.rs  template.rs  tileset.rs
crates/bevy_tiled_avian/: Cargo.toml  README.md
crates/bevy_tiled_avian/examples/: basic_physics.rs  collision_groups.rs  debug_shapes.rs  property_driven.rs  tile_colliders.rs  type_export.rs
crates/bevy_tiled_avian/src/: config.rs  lib.rs  objects.rs  plugin.rs  properties.rs  shapes.rs  tiles.rs
crates/bevy_tiled_core/: ARCHITECTURE.md  Cargo.toml
crates/bevy_tiled_core/examples/: basic_spawn.rs  complex_enum_demo.rs  custom_components.rs  enum_demo.rs  export_types.rs  extension_pattern.rs  property_workflow.rs  type_export_demo.rs
crates/bevy_tiled_core/src/: lib.rs  plugin.rs
crates/bevy_tiled_core/src/components/: layer.rs  map.rs  mod.rs  object.rs  tile.rs
crates/bevy_tiled_core/src/events/: mod.rs
crates/bevy_tiled_core/src/properties/: deserialize.rs  export.rs  mod.rs  registry.rs
crates/bevy_tiled_core/src/spawn/: layers.rs  map.rs  mod.rs  objects.rs  tiles.rs
crates/bevy_tiled_core/src/systems/: context.rs  spawn.rs
crates/bevy_tiled_macros/: Cargo.toml
crates/bevy_tiled_macros/src/: lib.rs
crates/bevy_tiled_native/: Cargo.toml  README.md
crates/bevy_tiled_native/src/: lib.rs
crates/bevy_tiled_tilemap/: Cargo.toml  README.md
crates/bevy_tiled_tilemap/examples/: all_layers.rs  animated_tiles.rs  basic_tilemap.rs  parallax_layers.rs
crates/bevy_tiled_tilemap/src/: lib.rs  plugin.rs
crates/bevy_tiled_tilemap/src/features/: mod.rs  parallax.rs  z_ordering.rs
crates/bevy_tiled_tilemap/src/images/: render.rs
crates/bevy_tiled_tilemap/src/objects/: debug_shapes.rs  tile_objects.rs
crates/bevy_tiled_tilemap/src/tiles/: animations.rs  render.rs  tilemap_builder.rs
crates/bevy_tiledmap/: Cargo.toml  README.md
crates/bevy_tiledmap/examples/: custom_config.rs  with_physics.rs
crates/bevy_tiledmap/src/: lib.rs  plugin.rs
crates/bevy_tiledmap_assets/: Cargo.toml
crates/bevy_tiledmap_assets/assets/: orthogonal_1.tsx  simple_map.tmx  tiled_types.json
crates/bevy_tiledmap_assets/examples/: basic_loading.rs
crates/bevy_tiledmap_assets/src/: lib.rs  plugin.rs
crates/bevy_tiledmap_assets/src/assets/: map.rs  mod.rs  tileset.rs  world.rs
crates/bevy_tiledmap_assets/src/loaders/: map.rs  mod.rs  tileset.rs  world.rs
crates/bevy_tiledmap_assets/src/properties/: mod.rs
crates/bevy_tiledmap_avian/: Cargo.toml  README.md
crates/bevy_tiledmap_avian/examples/: basic_physics.rs  collision_groups.rs  debug_shapes.rs  property_driven.rs  tile_colliders.rs  type_export.rs
crates/bevy_tiledmap_avian/src/: config.rs  lib.rs  objects.rs  plugin.rs  properties.rs  shapes.rs  tiles.rs
crates/bevy_tiledmap_core/: ARCHITECTURE.md  Cargo.toml  assets
crates/bevy_tiledmap_core/examples/: basic_spawn.rs  complex_enum_demo.rs  comprehensive_types.rs  custom_components.rs  enum_demo.rs  export_types.rs  extension_pattern.rs  property_workflow.rs  type_export_demo.rs
crates/bevy_tiledmap_core/src/: debug.rs  lib.rs  plugin.rs  project.rs
crates/bevy_tiledmap_core/src/components/: layer.rs  map.rs  mod.rs  object.rs  tile.rs
crates/bevy_tiledmap_core/src/events/: mod.rs
crates/bevy_tiledmap_core/src/properties/: deserialize.rs  export.rs  mod.rs  registry.rs
crates/bevy_tiledmap_core/src/spawn/: images.rs  layers.rs  map.rs  objects.rs  tiles.rs
crates/bevy_tiledmap_core/src/systems/: context.rs  mod.rs  spawn.rs
crates/bevy_tiledmap_macros/: Cargo.toml
crates/bevy_tiledmap_macros/src/: lib.rs
crates/bevy_tiledmap_native/: Cargo.toml  README.md
crates/bevy_tiledmap_native/src/: lib.rs
crates/bevy_tiledmap_tilemap/: Cargo.toml  README.md
crates/bevy_tiledmap_tilemap/examples/: all_layers.rs  animated_tiles.rs  basic_tilemap.rs  parallax_layers.rs
crates/bevy_tiledmap_tilemap/src/: config.rs  lib.rs  plugin.rs
crates/bevy_tiledmap_tilemap/src/features/: animation_state.rs  mod.rs  parallax.rs  z_ordering.rs
crates/bevy_tiledmap_tilemap/src/images/: mod.rs  render.rs
crates/bevy_tiledmap_tilemap/src/objects/: debug_shapes.rs  mod.rs  tile_objects.rs
crates/bevy_tiledmap_tilemap/src/tiles/: mod.rs  render.rs  tilemap_builder.rs
docs/: PROPERTIES.md  README.md  architecture.md  components-comparison.md  comprehensive-demo-plan.md  design-decisions.md  future.md  layer2-data-requirements.md  layer2-plan.md  physics-integration.md  property-system.md  type-mapping.md
examples/: custom_config.rs  demo.rs  infinite_map.rs  quick_start.rs
src/: lib.rs  plugin.rs
