[workspace]
members = ["crates/bevy_tiled_assets", "crates/bevy_tiled_core"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["syynth.dev"]

[workspace.lints.clippy]
too_many_arguments = "allow"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
type_complexity = "allow"

alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)', 'cfg(bevy_lint)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
