[package]
name = "bevy_tiledmap"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = [
    "crates/bevy_tiledmap_assets",
    "crates/bevy_tiledmap_avian",
    "crates/bevy_tiledmap_core",
    "crates/bevy_tiledmap_macros",
    "crates/bevy_tiledmap_native",
    "crates/bevy_tiledmap_tilemap",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["syynth.dev"]

[features]
default = ["tilemap", "avian"]

# Layer 3 integrations (optional)
tilemap = ["dep:bevy_tiledmap_tilemap"]
avian = ["dep:bevy_tiledmap_avian"]
native = ["dep:bevy_tiledmap_native"]

[dependencies]
# Core dependencies (always included)
bevy_tiledmap_assets = { path = "crates/bevy_tiledmap_assets", version = "0.0.1" }
bevy_tiledmap_core = { path = "crates/bevy_tiledmap_core", version = "0.1.0" }

# Layer 3 integrations (feature-gated)
bevy_tiledmap_tilemap = { path = "crates/bevy_tiledmap_tilemap", version = "0.1.0", optional = true }
bevy_tiledmap_avian = { path = "crates/bevy_tiledmap_avian", version = "0.1.0", optional = true }
bevy_tiledmap_native = { path = "crates/bevy_tiledmap_native", version = "0.1.0", optional = true }

# Bevy (required)
bevy = { version = "0.17", default-features = false }

# Re-exported for TiledClass macro users
tiled = "0.15"
inventory = "0.3"

[dev-dependencies]
# For examples - use full Bevy with default features
bevy = { version = "0.17" }

# For examples that use physics
avian2d = "0.4"

# For examples that use TiledClass macro
inventory = "0.3"
tiled = "0.15"

# Inspector for debugging
bevy-inspector-egui = "0.35"

[lints]
workspace = true

[workspace.lints.clippy]
too_many_arguments = "allow"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
type_complexity = "allow"

alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)', 'cfg(bevy_lint)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
