[package]
name = "bevy_tiled_macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Procedural macros for bevy_tiled - derive TiledClass for automatic component registration"
repository = "https://github.com/yourusername/bevy_tiled"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
