[package]
name = "bevy_tiledmap"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["tilemap"]

# Layer 3 integrations (optional)
tilemap = ["dep:bevy_tiledmap_tilemap"]
avian = ["dep:bevy_tiledmap_avian"]
native = ["dep:bevy_tiledmap_native"]

[dependencies]
# Core dependencies (always included)
bevy_tiledmap_assets = { path = "../bevy_tiledmap_assets", version = "0.0.1" }
bevy_tiledmap_core = { path = "../bevy_tiledmap_core", version = "0.1.0" }

# Layer 3 integrations (feature-gated)
bevy_tiledmap_tilemap = { path = "../bevy_tiledmap_tilemap", version = "0.1.0", optional = true }
bevy_tiledmap_avian = { path = "../bevy_tiledmap_avian", version = "0.1.0", optional = true }
bevy_tiledmap_native = { path = "../bevy_tiledmap_native", version = "0.1.0", optional = true }

# Bevy (required)
bevy = { version = "0.17", default-features = false }

[lints]
workspace = true
