[package]
name = "bevy_tiledmap_assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["bevy", "tiled", "assets", "gamedev"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_render"] }
normalize-path = "0.2"
tiled = { version = "0.15", features = ["world"] }
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
