[package]
name = "bevy_tiledmap_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Entity spawning backbone for bevy_tiled - converts Tiled assets to ECS hierarchy"
repository = "https://github.com/yourusername/bevy_tiled"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_log", "bevy_gizmos"] }
bevy_common_assets = { version = "0.14", features = ["json"] }
bevy_tiledmap_assets = { path = "../bevy_tiledmap_assets" }
bevy_tiledmap_macros = { path = "../bevy_tiledmap_macros" }
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiled = "0.15"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
bevy-inspector-egui = "0.35"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
