[package]
name = "bevy_tiledmap_tilemap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "bevy_ecs_tilemap integration for bevy_tiled - performant tile layer rendering"
repository = "https://github.com/adrien-bon/bevy_tiled"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_render"] }
bevy_tiledmap_core = { path = "../bevy_tiledmap_core" }
bevy_tiledmap_assets = { path = "../bevy_tiledmap_assets" }
bevy_ecs_tilemap = "0.17"
tiled = "0.15"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
bevy-inspector-egui = "0.35.0"

[features]
default = ["animations", "parallax"]
animations = []
parallax = []
debug_shapes = []

[lints]
workspace = true
